--- a/model_1/config_1.json
+++ b/model_1/config_1.json
@@ -2,15 +2,22 @@
     "controllers": {
         "simple_controller": {
             "sync_read":true,
-            "attached_motors": ["motor_1"],
+            "attached_motors": ["motor_1", "motor_2"],
             "protocole":1,
-            "port":"/dev/ttyACM0"
+            "port":"/dev/ttyACM1"
         }
     },
     "motorgroups":{},
     "motors":{
         "motor_1":{
-            "id":17,
+            "id":12,
+            "orientation":"indirect",
+            "type":"AX-12",
+            "angle_limit":[-90.0, 90.0],
+            "offset":0.0
+        },
+        "motor_2":{
+            "id":15,
             "orientation":"indirect",
             "type":"AX-12",
             "angle_limit":[-90.0, 90.0],
@@ -18,4 +25,3 @@
         }
     }
 }
-            
